--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
             <p> This is the very first paragraph </p>
+	    <p> This is a new paragraph </p>
     </body>
 </html>
