--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Here is the title of the project </h1>
+<!DOCTYPE html>
+<html>
+    <head>
+            <title></title>
+    </head>
+    <body>
+            <p> This is the very first paragraph </p>
+    </body>
+</html>
