--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <title></title>
+            <title> My index page </title>
     </head>
     <body>
             <p> This is the very first paragraph </p>
